feat(form): add small improvements

--- a/form/form.html
+++ b/form/form.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Character Creation Form</title>
-    <link rel="stylesheet" type="text/css" href="form.css">
+    <link rel="stylesheet" type="text/css" href="../style/form.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
         <div class="selectors">
             <div class="field">
                 <label for="gold">Pièces d'or :</label>
-                <input type="number" id="gold" name="gold" required>
+                <input type="number" id="gold" name="gold" min="0" required>
             </div>
             <div class="field">
                 <label for="force">Force :</label>
